# youtube-channel-notion-knowledge

./: .env.example  .gitignore  CODEX.md  README.md  SKILL.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  requested-playlist-trial.yml
docs/: architecture.md  gpt-image-guide.md  requested-playlist-trial.md  setup.md
scripts/: retry_missing_transcripts.py  run_realestate_playlists.ps1
src/yt_notion_digest/: __init__.py  cli.py  config.py  models.py  notion.py  pipeline.py  storage.py  summarizer.py  transcripts.py  web.py  youtube.py
tests/: test_notion_blocks.py  test_pipeline.py  test_summarizer.py  test_youtube.py
