[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-channel-notion-knowledge"
version = "0.1.0"
description = "Collect every public upload from a YouTube channel, retrieve transcripts, create comprehensive summaries, and sync them to Notion."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GitHub-GPT Developer" }]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
  "youtube-transcript-api>=1.2.4,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.6,<1"
]

[project.scripts]
yt-notion-digest = "yt_notion_digest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yt_notion_digest = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B"]
ignore = ["E501"]
